--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,21 +32,18 @@ jobs:
         run: docker push ghcr.io/${{ github.repository }}/node-s3-check:latest
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
-      - name: Set up AWS CLI
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Deploy Helm
+        uses: bitovi/github-actions-deploy-eks-helm@v1.2.10
         with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: us-east-1
-
-      - name: Update ECS Service to Deploy New Image
-        run: |
-            aws ecs update-service \
-            --cluster evgeni-ecs-cluster \
-            --service evgeni-test-service \
-            --force-new-deployment \
-            --region us-east-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+          cluster-name: evgeni-eks-cluster
+          config-files: ./helm-charts/file-checker/values.yaml
+          chart-path: ./helm-charts/file-checker/
+          namespace: apps
+          name: file-checker
