--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
     needs: build
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
       - name: Deploy Helm
         uses: bitovi/github-actions-deploy-eks-helm@v1.2.10
         with:
