--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
+
       - name: Deploy Helm
         uses: bitovi/github-actions-deploy-eks-helm@v1.2.10
         with:
@@ -46,7 +46,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
           cluster-name: evgeni-eks-cluster
-          config-files: ./helm-charts/file-checker/values.yaml
-          chart-path: ./helm-charts/file-checker/
+          config-files: helm-charts/file-checker/values.yaml
+          chart-path: helm-charts/file-checker
           namespace: apps
           name: file-checker
