--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,9 @@ jobs:
     needs: build
 
     steps:
-      - name: Checkout code  # Add this step to access the Helm chart
+      - name: Checkout code  
         uses: actions/checkout@v2
-        
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -68,8 +68,5 @@ jobs:
             --set image.repository=ghcr.io/${{ github.repository }}/node-s3-check \
             --set image.tag=latest \
             --set image.pullPolicy=Always \
-            --set hpa.enabled=true \
-            --set hpa.minReplicas=2 \
-            --set hpa.maxReplicas=10 \
-            --set hpa.targetCPUUtilizationPercentage=50
+
 
