--- a/helm-charts/file-checker/templates/ingress.yaml
+++ b/helm-charts/file-checker/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: <your-domain-or-ip>
+    - host: aaba41a6d356c401680058176d35d045-1367770135.eu-west-1.elb.amazonaws.com
       http:
         paths:
           - path: /
