--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,9 @@ jobs:
             --set image.repository=ghcr.io/${{ github.repository }}/node-s3-check \
             --set image.tag=latest \
             --set image.pullPolicy=Always \
-            
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=aa0d4c62e01554527a0eb869fd5a92bd-1991468218.eu-west-1.elb.amazonaws.com \
+            --set ingress.hosts[0].paths[0]=/ \
+            --set ingress.hosts[0].paths[1]=/check-file
 
 
