--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,6 @@ jobs:
             --set ingress.enabled=true \
             --set ingress.hosts[0].host=aa0d4c62e01554527a0eb869fd5a92bd-1991468218.eu-west-1.elb.amazonaws.com \
             --set ingress.hosts[0].paths[0]=/ \
-            --set ingress.hosts[0].paths[1]=/check-file
+            --set ingress.hosts[0].paths[1]=/*
 
 
